# mcp-mongodb-novel-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  dev_run.sh  dev_test.sh  mcp_stdio_proxy.py  run_mcp_stdio_proxy.sh
.github/: copilot-instructions.md
character-scraper/: README.md  requirements.txt
character-scraper/config/: settings.json
character-scraper/src/: config.py  database.py  scraper.py
docs/: database_interface.md
scripts/: mongodb_adapter.py  run_scrapers.py  run_scrapers.sh  scrape_characters.py  scrape_novel.py  scrape_qa.py  scrape_x_timeline.py  scraper_config.py
scripts/scraper/: adapter.py  coordinator.py  interface.py  threading.py
scripts/scraper/implementations/: mcp_mongodb_adapter.py  text_file_adapter.py
src/: main.rs
src/db/: connection.rs  mod.rs
src/handlers/: crud_handler.rs  mcp_handler.rs  mod.rs  rmcp_handler.rs
src/mcp/: conversion.rs  mod.rs  protocol.rs  server.rs
src/models/: domain.rs
src/services/: crud_service.rs  db_service.rs  mod.rs
src/utils/: mod.rs  query_parser.rs
