[package]
name = "mcp_database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.6"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
regex = "1.9"
dotenv = "0.15"

[features]
mcp_write_access = []
