[package]
name = "mcp_database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.6"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0" 
regex = "1.9"
dotenv = "0.15"
# MCP SDK dependencies
schemars = "0.8"
tokio-util = "0.7.14"
uuid = "1.16.0"
warp = "0.3.7"
rmcp= { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io"] }
futures-util = "0.3"
tokio-stream = "0.1.17"

[features]
mcp_write_access = []
